--- a/index.html
+++ b/index.html
@@ -5,10 +5,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document Yama Roni</title>
+
+    <!-- Ini CSS Internal -->
+    <style>
+        article {
+            background-color: lightcoral;
+        }
+    </style>
+
+    <!-- Ini CSS External -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    <!-- Ini CSS Inline -->
+    <header onmouseleave="showAlert();" style="background-color: aqua; display: flex; justify-content: space-between;">
+        <h1>Ini Kiri</h1>
+        <h1>Ini Kanan</h1>
+    </header>
 
+    <article>
+        <p>Lorem Ipsum Dolor Sit Amet Adipiscing...</p>
+    </article>
+
+    <footer>
+        <span>Footer</span>
+    </footer>
+
+    <!-- Ini JS Internal -->
+    <script>
+        function showAlert() {
+            alert("Hello, this is an internal JavaScript alert!");
+        }
+    </script>
 </body>
 
 </html>
